--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -377,4 +377,25 @@
   timestamp     = {2017.09.16},
 }
 
+@Article{MR1698956,
+  author     = {Andersson, Lars and Driver, Bruce K.},
+  title      = {Finite-dimensional approximations to {W}iener measure and path integral formulas on manifolds},
+  journal    = {J. Funct. Anal.},
+  year       = {1999},
+  volume     = {165},
+  number     = {2},
+  pages      = {430--498},
+  issn       = {0022-1236},
+  doi        = {10.1006/jfan.1999.3413},
+  fjournal   = {Journal of Functional Analysis},
+  mrclass    = {58J65 (46G12 60H07)},
+  mrnumber   = {1698956},
+  mrreviewer = {Zhongmin Qian},
+  url        = {http://dx.doi.org/10.1006/jfan.1999.3413},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: fileDirectory:/home/andy/ownCloud/bib-cache;}
+
+@Comment{jabref-meta: fileDirectory-andy-conformal:/home/andy/ownCloud/bib-cache;}
