work on discretization, heat kernels

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -234,18 +234,17 @@
 }
 
 @Proceedings{Vafa2001,
-  title         = {Winter {S}chool on {M}irror {S}ymmetry, {V}ector {B}undles and {L}agrangian {S}ubmanifolds},
-  year          = {2001},
-  editor        = {Vafa, Cumrun and Yau, S.-T.},
-  volume        = {23},
-  series        = {AMS/IP Studies in Advanced Mathematics},
-  publisher     = {American Mathematical Society, Providence, RI; International Press, Somerville, MA},
-  isbn          = {0-8218-2159-8},
-  __markedentry = {[andy:]},
-  booktitle     = {Proceedings of the school held at {H}arvard {U}niversity, {C}ambridge, {MA}, {J}anuary 1999},
-  keywords      = {00B25 (14-06 32-06 53-06)},
-  mrnumber      = {1876062},
-  pages         = {x+377},
+  title     = {Winter {S}chool on {M}irror {S}ymmetry, {V}ector {B}undles and {L}agrangian {S}ubmanifolds},
+  year      = {2001},
+  editor    = {Vafa, Cumrun and Yau, S.-T.},
+  volume    = {23},
+  series    = {AMS/IP Studies in Advanced Mathematics},
+  publisher = {American Mathematical Society, Providence, RI; International Press, Somerville, MA},
+  isbn      = {0-8218-2159-8},
+  booktitle = {Proceedings of the school held at {H}arvard {U}niversity, {C}ambridge, {MA}, {J}anuary 1999},
+  keywords  = {00B25 (14-06 32-06 53-06)},
+  mrnumber  = {1876062},
+  pages     = {x+377},
 }
 
 @Book{MR2003030,
@@ -368,7 +367,7 @@
   year          = {1983},
   volume        = {90},
   pages         = {161},
-  __markedentry = {[andy:6]},
+  __markedentry = {[andy:]},
   booktitle     = {{MATHEMATICAL PHYSICS VII. PROCEEDINGS, 7TH INTERNATIONAL CONGRESS, BOULDER, USA, AUGUST 1-10, 1983}},
   doi           = {10.1007/BF01205500},
   owner         = {andy},
@@ -392,6 +391,23 @@
   mrnumber   = {1698956},
   mrreviewer = {Zhongmin Qian},
   url        = {http://dx.doi.org/10.1006/jfan.1999.3413},
+}
+
+@Article{Baer2007,
+  author        = {Christian Baer and Frank Pfaeffle},
+  title         = {Path integrals on manifolds by finite dimensional approximation},
+  __markedentry = {[andy:6]},
+  abstract      = {Let M be a compact Riemannian manifold without boundary and let H be a self-adjoint generalized Laplace operator acting on sections in a bundle over M. We give a path integral formula for the solution to the corresponding heat equation. This is based on approximating path space by finite dimensional spaces of geodesic polygons. We also show a uniform convergence result for the heat kernels. This yields a simple and natural proof for the Hess-Schrader-Uhlenbrock estimate and a path integral formula for the trace of the heat operator.},
+  date          = {2007-03-09},
+  doi           = {10.1515/CRELLE.2008.089},
+  eprint        = {math/0703272v1},
+  eprintclass   = {math.AP},
+  eprinttype    = {arXiv},
+  file          = {online:http\://arxiv.org/pdf/math/0703272v1:PDF},
+  journaltitle  = {Journal f\"ur die reine und angewandte Mathematik (Crelles Journal) 625, 29-57 (2008)},
+  keywords      = {math.AP, math-ph, math.DG, math.MP, math.PR, 58J65, 58J35, 47D06},
+  owner         = {andy},
+  timestamp     = {2017.09.18},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
