--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2660,7 +2660,7 @@ what we did above for \autoref{prop:sigma-heat}.
 
 A fundamental example is the case
 \begin{equation}
-  Y = \R, \qquad V = \frac{12}{\omega^2 x^2}, \qquad \omega \in \R.
+  Y = \R, \qquad V = \frac12{\omega^2 x^2}, \qquad \omega \in \R.
 \end{equation}
 Then we have
 \begin{equation}
