make some promises

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2451,7 +2451,8 @@ paths, with each segment the unique minimizing geodesic between its endpoints.
 \insfig{qft-geometry-17}{0.8}
 $\cC_{X;N}$ is an open dense subset\footnote{The restriction to an open dense
 subset is a technicality, brought on by the fact that some pairs of points are
-connected by more than one geodesic.} in $Y^{N+1}$.
+connected by more than one length-minimizing 
+geodesic.} in $Y^{N+1}$.
 Restricting $S$ to these paths gives $S: \cC_{X;N} \to \R$.
 $\cC_{X;N}$ also has a natural measure induced from the volume
 measure on $Y$, up to a tricky constant:
@@ -2677,15 +2678,29 @@ Thus we compute
   Z_{S^1(T)} = \Tr \e^{-T H} = \sum_{n=0}^\infty \e^{- \omega T(n + \half)} = \frac{1}{2 \sinh(\omega T/2)}.
 \end{equation}
 
+\fixme{...}
+
 
 \subsection{Infinite-dimensional determinants}
 
 \fixme{explain connection to determinants: no regularization
 needed if we pick the right metric?}
 
+
 \subsection{Effective field theory in quantum mechanics}
 
-\fixme{effective field theory}
+\fixme{effective field theory in a coupled system}
+
+
+\subsection{Supersymmetric quantum mechanics}
+
+
+\fixme{...}
+
+
+\subsection{The index theorem}
+
+\fixme{...}
 
 
 \appendix
